--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "pinia": "^2.1.7",
-    "vue": "^3.4.29",
-    "vue-router": "^4.3.0"
+    "@emailjs/browser": "^4.3.3",
+    "@vueuse/core": "^10.7.0",
+    "vue": "^3.3.10",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
     "vite": "^5.3.1"
   },
-  "description": "This template should help get you started developing with Vue 3 in Vite.",
+  "description": "this template should help get you started developing with Vue 3 in Vite",
   "main": "vite.config.js",
   "keywords": [],
   "author": "",
